// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    id="myContainer"
  >
    <div
      class="card"
      data-testid="card"
      id="myCard"
      style="transform: rotateY(0deg);"
    >
      <div
        class="showingFront"
      >
        <div
          class="card-top"
          style="background-color: yellow;"
        />
        <div
          class="card-bottom"
          style="background-color: purple;"
        >
          <div
            class="card-message"
          >
             (click card to flip) 
          </div>
        </div>
        <div
          class="front-text-box text-box front-text-box-up"
          id="front-text-box"
        >
          <div
            class="top-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              boy
            </div>
          </div>
          <div
            class="bottom-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              girl
            </div>
          </div>
        </div>
      </div>
      <div
        class="back"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card snapshot show bottom 1`] = `
<DocumentFragment>
  <div
    class="container"
    id="myContainer"
  >
    <div
      class="card"
      data-testid="card"
      id="myCard"
      style="transform: rotateY(0deg);"
    >
      <div
        class="showingFront"
      >
        <div
          class="card-top"
          style="background-color: yellow;"
        />
        <div
          class="card-bottom"
          style="background-color: purple;"
        >
          <div
            class="card-message"
          >
             (click card to flip) 
          </div>
        </div>
        <div
          class="front-text-box text-box front-text-box-down"
          id="front-text-box"
        >
          <div
            class="top-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              boy
            </div>
          </div>
          <div
            class="bottom-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              girl
            </div>
          </div>
        </div>
      </div>
      <div
        class="back"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card snapshot show flipped 1`] = `
<DocumentFragment>
  <div
    class="container"
    id="myContainer"
  >
    <div
      class="card"
      data-testid="card"
      id="myCard"
      style="transform: rotateY(-180deg);"
    >
      <div
        class="showingFront"
      >
        <div
          class="card-top"
          style="background-color: yellow;"
        />
        <div
          class="card-bottom"
          style="background-color: purple;"
        >
          <div
            class="card-message"
          >
             (click card to flip) 
          </div>
        </div>
        <div
          class="front-text-box text-box front-text-box-down"
          id="front-text-box"
        >
          <div
            class="top-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              boy
            </div>
          </div>
          <div
            class="bottom-text"
            style="opacity: 1;"
          >
            <div
              class="latin"
            >
              girl
            </div>
          </div>
        </div>
      </div>
      <div
        class="back"
      />
    </div>
  </div>
</DocumentFragment>
`;
